--- a/src/less/pages/series.less
+++ b/src/less/pages/series.less
@@ -25,6 +25,8 @@
   }
 
   .series-article-preview {
+    position: relative;
+    background: white;
     @media(max-width:800px) {
       height: 100px !important;
       width: 100%;
@@ -221,18 +223,19 @@
           padding: 2px 8px;
 
           i {
-            margin-right: 5px;
+            margin-right: 8px;
           }
         }
 
         .author {
           img {
             width: 30px;
-            margin-right: 5px;
+            margin-right: 8px;
           }
 
           span {
             text-transform: capitalize;
+            color: #505050;
           }
         }
 
