--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -3,12 +3,13 @@
 
 .post-content > p > a {
   display: none;
+  margin: 0;
 }
 
 .link-preview {
   padding: 15px;
   transition: all 0.2s ease-out;
-  margin: 20px auto 30px;
+  margin: 0 auto;
   display: block;
   overflow: hidden;
   transition: all 0.2s easout;
