--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,7 +1,7 @@
 #seriesposts {
   margin-bottom: 20px;
   padding: 20px 20px 1px;
-  background: #f7f9fa;
+  background: #e7edf2;
   border-radius: 3px;
   @media(max-width: 600px) {
 
