--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -14,7 +14,7 @@
       .content {
         position: relative;
         margin: 15px;
-        padding:0;
+        padding: 0;
         height: fit-content;
       }
     }
@@ -94,24 +94,24 @@
         position: absolute;
         bottom: 0;
         width: -webkit-fill-available;
-        padding: 10px 0 0 0;
-
-        @media(max-width: 800px) {
-          width: 90%;
-        }
+        padding: 10px 0 0;
 
         .btn {
           padding: 12px 20px;
           font-size: 16px;
           font-family: FFMarkWebProBook,sans-serif;
+
           a {
             line-height: 1;
             height: fit-content;
+
+            &:hover {
+              background: @hover-color;
+              color: white;
+            }
           }
-
-
           @media(max-width: 600px) {
-            display:block !important;
+            display: block !important;
           }
         }
       }
