--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -36,7 +36,7 @@
 			width: 90%;
 			color: #527089;
 			font-size: 1em;
-			font-family: 'TTNorms-Medium',sans-serif!important;
+			font-family: 'FFMarkWebProMedium',sans-serif!important;
 			font-weight: 200;
 			-webkit-transition: 0.3s all;
 			transition: 0.3s all;
@@ -77,7 +77,7 @@
 
 	#nav-search {
 		font-size: 1em;
-		font-family: 'TTNorms-Medium',sans-serif!important;
+		font-family: 'FFMarkWebProMedium',sans-serif!important;
 		font-weight: 200;
 		transition: 0.3s all;
 		outline: none;
@@ -156,7 +156,7 @@
 
 	#my-custom-results {
 		font-size: 1em;
-		font-family: 'TTNorms-Medium',sans-serif!important;
+		font-family: 'FFMarkWebProMedium',sans-serif!important;
 		font-weight: 200;
 		transition: 0.3s all;
 		outline: none;
@@ -222,7 +222,6 @@
 						display: block;
 						width: fit-content;
 
-
 						i {
 							margin-right: 4px;
 							font-size: 0.7em;
@@ -257,7 +256,7 @@
 			margin: 0 8px 8px 0;
 			padding: 7px 12px;
 			border: 1px solid #c9d5e48c;
-    	background: rgba(255, 255, 255, 0.5);
+			background: rgba(255, 255, 255, 0.5);
 			@media(max-width: 1000px) {
 				font-size: 0.77em !important;
 				margin: 0 5px 5px 0;
@@ -318,7 +317,6 @@
 
 	#newsletter-sidebar {
 		.newsletter-form {
-
 			input[type="text"],
 			input[type="email"] {
 				font-weight: 100;
@@ -409,7 +407,7 @@
 				color: white;
 				border: 0;
 				text-transform: Uppercase;
-				outline:none;
+				outline: none;
 				transition: all 0.3s ease-out;
 
 				span {
@@ -418,7 +416,7 @@
 
 				&:hover {
 					background: @hover-color;
-				  box-shadow: 2px 2px 3px 0 #239084;
+					box-shadow: 2px 2px 3px 0 #239084;
 				}
 			}
 		}
@@ -430,11 +428,9 @@
 		}
 	}
 
-
 	.series {
-
 		.seriesitem {
-			transition: all .2s ease-out;
+			transition: all 0.2s ease-out;
 			border-bottom: 1px solid #d5dde8;
 			height: 60px;
 			margin-bottom: 0;
@@ -451,59 +447,68 @@
 
 			&:hover {
 				cursor: pointer;
+
 				* {
-						color: white;
-						fill: white;
+					color: white;
+					fill: white;
 				}
 
 				&.data-analysis-pandas {
-					background:@pandas-color;
+					background: @pandas-color;
 				}
+
 				&.adventures-in-excel {
-					background:@excel-color;
+					background: @excel-color;
 				}
+
 				&.building-flask-apps {
-					background:@flask-color;
+					background: @flask-color;
 				}
+
 				&.code-snippet-corner {
-					background:@code-color;
+					background: @code-color;
 				}
+
 				&.create-an-aws-api {
-					background:@aws-color;
+					background: @aws-color;
 				}
-				&.the-rise-of-google-cloud{
-					background:@google-color;
+
+				&.the-rise-of-google-cloud {
+					background: @google-color;
 				}
+
 				&.working-with-mysql {
-					background:@mysql-color;
+					background: @mysql-color;
 				}
+
 				&.mongodb-cloud {
-					background:@mongdb-color;
+					background: @mongdb-color;
 				}
+
 				&.hacking-tableau-server {
-					background:@tableau-color;
+					background: @tableau-color;
 				}
 			}
 		}
 
 		.pandas {
-			background:url('https://cdn.hackersandslackers.com/images/11/panda-icon.png');
+			background: url("https://cdn.hackersandslackers.com/images/11/panda-icon.png");
 		}
 
 		.codesnippetcorner {
-			background:url('https://cdn.hackersandslackers.com/images/11/python-icon.png');
+			background: url("https://cdn.hackersandslackers.com/images/11/python-icon.png");
 		}
 
 		.mysql {
-			background:url('https://cdn.hackersandslackers.com/images/11/dolphin-icon.png');
+			background: url("https://cdn.hackersandslackers.com/images/11/dolphin-icon.png");
 		}
 
 		.flask {
-			background:url('https://cdn.hackersandslackers.com/images/11/flask-icon.png')
+			background: url("https://cdn.hackersandslackers.com/images/11/flask-icon.png");
 		}
 
 		.aws-api {
-			background:url('https://cdn.hackersandslackers.com/images/11/api-icon.png')
+			background: url("https://cdn.hackersandslackers.com/images/11/api-icon.png");
 		}
 
 		.post-title {
@@ -512,26 +517,52 @@
 			letter-spacing: 0;
 			font-size: 16px;
 			margin: 0;
-			font-family: 'TTNorms-Medium',sans-serif;
+			font-family: 'FFMarkWebProMedium',sans-serif;
 			display: flex;
 			align-items: center;
 
-			svg,
-			i {
+			i,
+			svg {
 				width: 24px;
 				margin-right: 15px;
 			}
 		}
 
-		.building-flask-apps svg {fill: @pandas-color}
-		.data-analysis-pandas i {color: @flask-color}
-		.code-snippet-corner svg {fill: @code-color}
-		.create-an-aws-api svg {fill: @aws-color}
-		.working-with-mysql svg {fill: @mysql-color}
-		.mongodb-cloud svg {fill: @mongdb-color}
-		.hacking-tableau-server i {color: @tableau-color}
-		.adventures-in-excel svg {color: @excel-color}
-		.the-rise-of-google-cloud i {color: @google-color}
+		.building-flask-apps svg {
+			fill: @pandas-color;
+		}
+
+		.data-analysis-pandas i {
+			color: @flask-color;
+		}
+
+		.code-snippet-corner svg {
+			fill: @code-color;
+		}
+
+		.create-an-aws-api svg {
+			fill: @aws-color;
+		}
+
+		.working-with-mysql svg {
+			fill: @mysql-color;
+		}
+
+		.mongodb-cloud svg {
+			fill: @mongdb-color;
+		}
+
+		.hacking-tableau-server i {
+			color: @tableau-color;
+		}
+
+		.adventures-in-excel svg {
+			color: @excel-color;
+		}
+
+		.the-rise-of-google-cloud i {
+			color: @google-color;
+		}
 
 		.series-image {
 			margin-right: 20px;
@@ -587,7 +618,7 @@
 		line-height: 1.4;
 		font-size: 15px;
 		margin: 0;
-		font-family: 'TTNorms-Medium', sans-serif;
+		font-family: 'FFMarkWebProMedium', sans-serif;
 		display: inline-block;
 
 		&:hover {
@@ -614,7 +645,7 @@
 		letter-spacing: 1px;
 		margin-top: 0;
 		white-space: nowrap;
-		font-family: 'TTNorms-Medium',serif;
+		font-family: 'FFMarkWebProMedium',serif;
 		@media(max-width: 1040px) {
 			font-size: 1.3em !important;
 		}
@@ -625,11 +656,9 @@
 		font-size: 1em;
 		line-height: 1.8;
 		padding-right: 0;
-		font-family: 'TTNorms-Medium',sans-serif;
+		font-family: 'FFMarkWebProMedium',sans-serif;
 	}
 }
-
-
 
 .widget {
 	margin-bottom: 45px;
@@ -638,7 +667,7 @@
 	.post-title {
 		a {
 			color: #208cad;
-			font-family: 'TTNorms-Medium',sans-serif;
+			font-family: 'FFMarkWebProMedium',sans-serif;
 			transition: all 0.2s ease;
 
 			&:hover {
@@ -652,18 +681,18 @@
 		margin-bottom: 15px;
 		text-transform: uppercase;
 		font-size: 1.5em;
-		font-family: 'ProductSans-Medium',TTNorms-Medium,serif;
+		font-family: 'ProductSans-Medium',FFMarkWebProMedium,serif;
 		color: @header-color;
 		font-weight: 500;
 	}
 
-	.title,
-	.sidebar-title {
+	.sidebar-title,
+	.title {
 		font-size: 1.32em;
 		font-weight: 500;
 		margin-bottom: 8px;
 		text-transform: uppercase;
-		font-family: 'TTNorms-Medium',FFMarkWebProMedium,serif;
+		font-family: 'FFMarkWebProMedium',FFMarkWebProMedium,serif;
 		letter-spacing: 2px;
 		color: #1f5373;
 	}
@@ -726,11 +755,11 @@
 			margin-bottom: 17px;
 			line-height: 1.35;
 			padding: 0 0 10px;
-			font-family: 'TTNorms-Medium' ,sans-serif;
+			font-family: 'FFMarkWebProMedium' ,sans-serif;
 
 			.post-title,
 			.single-author-name {
-				font-family: 'TTNorms-Medium', sans-serif;
+				font-family: 'FFMarkWebProMedium', sans-serif;
 				.transition(all 0.2s ease);
 				@media(max-width: 600px) {
 					text-align: left;
@@ -811,7 +840,7 @@
 		p {
 			margin-bottom: 10px;
 			font-size: 16px;
-			font-family: 'TTNorms-Medium',sans-serif;
+			font-family: 'FFMarkWebProMedium',sans-serif;
 		}
 	}
 }
