--- a/src/less/pages/kanban.less
+++ b/src/less/pages/kanban.less
@@ -119,6 +119,7 @@
     display: flex;
     justify-content: space-between;
     background: none;
+    margin-top: 30px;
 
     .column {
       background: #fff;
@@ -134,6 +135,10 @@
         margin: 0 5% 50px!important !important;
         max-width: 90% !important;
         width: 90% !important;
+      }
+
+      &:last-child {
+        margin-right: 0;
       }
 
       .column-head {
@@ -209,7 +214,7 @@
       }
 
       h2 {
-        margin-top: 0;
+        margin-top: 0 !important;
         font-size: 1.38em;
         margin: 20px auto;
         /*border-bottom: 1px solid fade(@theme-color, 40%);*/
