--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,7 +1,7 @@
 #seriesposts {
   margin-bottom: 20px;
   padding: 20px 20px 1px;
-  background: #e7edf2;
+  background: #dde7ef;
   border-radius: 3px;
   @media(max-width: 600px) {
 
@@ -45,7 +45,7 @@
       }
 
       &::before {
-        content: "Post " counter(step-counter, upper-roman) ". ";
+        content: "Part " counter(step-counter, upper-roman) ". ";
         font-family: 'FFMarkWebProMedium';
         color: #518899;
 
