--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -11,35 +11,6 @@
 	margin-top: 30px;
 	box-shadow: inset 0 1px 6px 0 rgba(44,50,63,0.41);
 
-	.widget.tag {
-		width: 37% !important;
-
-		a {
-			color: white;
-
-			&:hover {
-				cursor: pointer;
-				color: @hover-color;
-			}
-		}
-		@media(max-width: 800px) {
-			margin-bottom: 10px;
-			max-width: none;
-			min-width: -webkit-fill-available !important;
-			min-width: -moz-available !important;
-		}
-	}
-
-	.widget.contributors {
-		width: 25%;
-		@media(max-width: 800px) {
-			margin-bottom: 10px;
-			max-width: none;
-			min-width: -webkit-fill-available !important;
-			min-width: -moz-available !important;
-		}
-	}
-
 	.footer-title {
 		color: #fff;
 		font-weight: 800;
@@ -47,6 +18,7 @@
 		font-size: 1.3em;
 		text-shadow: -1px 1px 1px #133e6d;
 		font-family: 'ProductSans-Regular';
+		text-align: left;
 		text-transform: uppercase;
 		letter-spacing: 2px;
 		border-bottom: 1px solid rgba(226, 255, 253, 0.21);
@@ -72,6 +44,151 @@
 		margin-top: 10px;
 		display: block;
 		padding: 0 10px 20px;
+	}
+}
+
+.widget {
+	padding: 10px 0;
+	width: 28%;
+	margin: 0;
+	@media(max-width: 800px) {
+		padding: 0 20px;
+		width: -webkit-fill-available;
+		margin: 10px 10px 60px;
+	}
+	@media(max-width: 600px) {
+		width: auto !important;
+		padding: 0 20px !important;
+	}
+	@media(max-width: 800px) {
+		width: 100%;
+		margin: 10px 0 60px;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
+/*====================================================
+			tag cloud
+		====================================================*/
+.widget.tags {
+	min-width: 37%;
+	width: 37% !important;
+	@media(max-width: 800px) {
+		margin-bottom: 10px;
+		max-width: none;
+		min-width: -webkit-fill-available !important;
+		min-width: -moz-available !important;
+	}
+	@media(max-width: 800px) {
+		margin-bottom: 10px;
+		max-width: none;
+		width: -webkit-fill-available !important;
+		width: -moz-available !important;
+	}
+
+	.tag-cloud {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-between;
+
+		a {
+			border: 0;
+			color: #fff;
+			margin: 0 6px 6px 0;
+			padding: 3px 10px;
+			display: inline-block;
+			height: fit-content;
+			width: fit-content;
+			flex-grow: 1;
+			text-align: center;
+			font-family: 'FFMarkWebProBook';
+			transition: all 0.2s ease-out;
+			font-size: 0.85em;
+			background: rgba(146, 209, 239, 0.1);
+			border: 1px solid rgba(255, 255, 255, 0.15);
+
+			&:hover {
+				cursor: pointer;
+				background: @hover-color;
+				color: white !important;
+				box-shadow: 1px 1px 2px #239084;
+				border: 1px solid darken(@hover-color, 20%);
+			}
+		}
+	}
+}
+/*====================================================
+			contributors
+		====================================================*/
+.widget.contributors {
+	width: 25%;
+	@media(max-width: 800px) {
+		margin-bottom: 10px;
+		max-width: none;
+		min-width: -webkit-fill-available !important;
+		min-width: -moz-available !important;
+	}
+
+	.contributor-container {
+		@media(max-width: 600px) {
+			margin: 20px auto;
+		}
+
+		.single-author {
+			display: flex;
+			align-items: center;
+			padding: 12px 0;
+			font-size: 18px;
+			font-weight: 200;
+			font-family: 'FFMarkWebProMedium', serif;
+			transition: all 0.2s ease;
+			border-bottom: 1px dashed rgba(255, 255, 255, 0.1) !important;
+			line-height: 1;
+
+			a {
+				color: #fff;
+
+				&:hover {
+					cursor: pointer;
+					color: @hover-color;
+				}
+			}
+
+			&:last-child {
+				border-bottom: none !important;
+			}
+
+			.avatar-link {
+				margin-right: 15px !important;
+
+				.avi {
+					height: 40px;
+					width: 40px;
+					border-radius: 0;
+					margin: 0;
+					border-bottom: 1px solid #2a4488;
+					border-right: 1px solid #2a4488;
+				}
+			}
+
+			.single-author-name {
+				font-size: 0.9em !important;
+				font-family: 'FFMarkWebProMedium', sans-serif !important;
+				color: #fff;
+			}
+
+			.role {
+				color: hsla(0, 0%, 100%, 0.7);
+				display: block;
+				font-family: 'FFMarkWebProBook';
+				font-size: 0.8em;
+				line-height: 1.2;
+				margin-top: 6px;
+			}
+		}
 	}
 }
 /*====================================================
@@ -185,128 +302,6 @@
 
 		span {
 			font-size: 14px;
-		}
-	}
-}
-
-.tag-cloud {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	min-width: 37%;
-	@media(max-width: 800px) {
-		margin-bottom: 10px;
-		max-width: none;
-		width: -webkit-fill-available !important;
-		width: -moz-available !important;
-	}
-
-	a {
-		border: 0;
-		color: #fff;
-		margin: 0 6px 6px 0;
-    padding: 3px 10px;
-		display: inline-block;
-		height: fit-content;
-		width: fit-content;
-		flex-grow: 1;
-		text-align: center;
-		font-family: 'FFMarkWebProBook';
-		transition: all 0.2s ease-out;
-		font-size: .85em;
-		background: rgba(146, 209, 239, 0.14);
-
-		&:hover {
-			cursor: pointer;
-			background: @hover-color;
-			color: white !important;
-			box-shadow: 1px 1px 2px #239084;
-			/*border: 1px solid darken(@hover-color, 20%);*/
-		}
-	}
-}
-
-.contributors {
-	.contributor-container {
-		@media(max-width: 600px) {
-			margin: 20px auto;
-		}
-
-		.single-author {
-			display: flex;
-			align-items: center;
-			padding: 12px 0;
-			font-size: 18px;
-			font-weight: 200;
-			font-family: 'FFMarkWebProMedium', serif;
-			transition: all 0.2s ease;
-			border-bottom: 1px dashed rgba(255, 255, 255, 0.1) !important;
-			line-height: 1;
-
-			a {
-				color: #fff;
-
-				&:hover {
-					cursor: pointer;
-					color: @hover-color;
-				}
-			}
-
-			&:last-child {
-				border-bottom: none !important;
-			}
-
-			.avatar-link {
-				margin-right: 15px !important;
-
-				.avi {
-					height: 40px;
-					width: 40px;
-					border-radius: 0;
-					margin: 0;
-					border-bottom: 1px solid #2a4488;
-					border-right: 1px solid #2a4488;
-				}
-			}
-
-			.single-author-name {
-				font-size: 0.9em !important;
-				font-family: 'FFMarkWebProMedium', sans-serif !important;
-				color: #fff;
-			}
-
-			.role {
-				color: hsla(0, 0%, 100%, 0.7);
-				display: block;
-				font-family: 'FFMarkWebProBook';
-				font-size: 0.8em;
-				line-height: 1.2;
-				margin-top: 6px;
-			}
-		}
-	}
-}
-
-.widget {
-	padding: 10px 0;
-	width: 28%;
-	margin: 0;
-	@media(max-width: 800px) {
-		padding: 0 20px;
-		width: -webkit-fill-available;
-		margin: 10px 10px 60px;
-	}
-	@media(max-width: 600px) {
-		width: auto !important;
-		padding: 0 20px !important;
-	}
-	@media(max-width: 800px) {
-		width: 100%;
-		margin: 10px 0 60px;
-
-		&:last-child {
-			margin-bottom: 0;
 		}
 	}
 }
