--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -4,7 +4,7 @@
 ====================================================*/
 .cover {
 	text-align: center;
-	background: white;
+	background-color: white;
 	padding: 40px;
 	margin-bottom: 30px;
 	width: 100%;
